crates/biome_js_analyze/tests/specs/nursery/noPlaywrightNetworkidle/valid/load.js
await page.waitForLoadState('load');
await page.goto('https://example.com');
await page.locator('.content').waitFor();


