crates/biome_js_analyze/tests/specs/nursery/noPlaywrightNetworkidle/invalid/wait-for-load-state.js
/* should generate diagnostics */
await page.waitForLoadState('networkidle');


